--- a/BreakfastFinder/Info.plist
+++ b/BreakfastFinder/Info.plist
@@ -23,7 +23,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>This sample uses the camera to capture images of breakfast items for object recognition.</string>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>LeaftLaunchScreen.storyboard</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -43,5 +43,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>for maps</string>
 </dict>
 </plist>
